<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.product.product_detail.ProductDetailFragment">

    <include
        android:id="@+id/toolbarProductDetail"
        layout="@layout/item_toolbar_product_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/sample_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarProductDetail" />

    <TextView
        android:id="@+id/tvFoodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="₺0,00"
        android:textColor="@color/bg_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFood" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/product_name"
        android:textColor="#191919"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFoodPrice" />

    <TextView
        android:id="@+id/tvAttribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/attribute"
        android:textColor="#697488"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProductName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shadow_reverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAttribute" />


    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toTopOf="@id/constraint" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAddToBasket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="@string/add_to_basket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/cart_thrash_icon_background"
            android:elevation="6dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/cart_thrash_icon_background"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_thrash"
                app:layout_constraintEnd_toEndOf="@id/cardView"
                app:layout_constraintTop_toBottomOf="@id/tvProductQuantity"
                app:tint="@color/bg_primary" />

            <TextView
                android:id="@+id/tvProductQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="1dp"
                android:background="@color/bg_primary"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/cardView"
                app:layout_constraintTop_toBottomOf="@id/ivAdd" />


            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/cart_screen_add_icon"
                android:scaleType="center"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/linearLayout"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>